maven large upgrade of plugins including site